[gd_scene load_steps=6 format=1]

[ext_resource path="res://MENU.gd" type="Script" id=1]
[ext_resource path="res://user screen.png" type="Texture" id=2]
[ext_resource path="res://start.png" type="Texture" id=3]
[ext_resource path="res://about.png" type="Texture" id=4]
[ext_resource path="res://exit.png" type="Texture" id=5]

[node name="start" type="Node"]

process/pause_mode = 2
script/script = ExtResource( 1 )

[node name="user screen" type="Sprite" parent="."]

transform/pos = Vector2( 554.631, 341.354 )
transform/scale = Vector2( 0.697856, 0.697856 )
texture = ExtResource( 2 )

[node name="ToolButton" type="ToolButton" parent="."]

anchor/right = 1
anchor/bottom = 1
rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 410.0
margin/top = 358.0
margin/right = -72.0
margin/bottom = 62.0
custom_colors/font_color_disabled = Color( 0.103882, 0.0361328, 0.578125, 1 )
custom_colors/font_color = Color( 0.0196838, 0.108047, 0.117188, 1 )
custom_colors/font_color_hover = Color( 0.707031, 0.115997, 0.115997, 1 )
custom_colors/font_color_pressed = Color( 0.131662, 0.628906, 0.127747, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 3 )
flat = true

[node name="ToolButton 2" type="ToolButton" parent="."]

rect/scale = Vector2( 0.5, 0.5 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 411.0
margin/top = 459.0
margin/right = 1097.0
margin/bottom = 639.0
custom_colors/font_color = Color( 0.0283203, 0.125, 0.0660858, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 4 )
flat = true

[node name="Button" type="Button" parent="."]

rect/scale = Vector2( 0.25, 0.25 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 844.0
margin/top = 526.0
margin/right = 1291.0
margin/bottom = 648.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
icon = ExtResource( 5 )
flat = false

[node name="Panel" type="Panel" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 7.0
margin/top = -4.0
margin/right = 1032.0
margin/bottom = 599.0

[connection signal="pressed" from="ToolButton" to="." method="_on_ToolButton_pressed1"]

[connection signal="pressed" from="ToolButton 2" to="." method="_on_ToolButton_2_pressed"]

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]


